<resources>
    <string name="app_name">Meu Beats</string>
    <string name="app_speciality">Especializados em fones para deejay</string>
    <string name="background_description">Background of LoginActivity</string>
    <string name="user">Usuário</string>
    <string name="password">Senha</string>
    <string name="login">Entrar</string>
    <string name="subscribe">Ainda não cadastrado? <a href="https://www.google.com.br">Inscreva-se!</a></string>
    <string name="default_headset">Default headset</string>
    <string name="add">Adicionar</string>
    <string name="question_mark">\?</string>
    <string name="connection">Conexão</string>
    <string name="compatibility">Compatibilidade</string>
    <string name="power_supply">Alimentação</string>
    <string name="autonomy">Autonomia</string>
    <string name="height">Altura</string>
    <string name="caption">Captação</string>
    <string name="buy">Comprar</string>
    <string name="select_a_product">Selecione um produto</string>
    <string name="not_connected">Houve uma falha na conexão =(</string>
    <string name="try_again">Tentar novamente</string>
    <string name="login_empty_fields">Existem campos não preenchidos</string>
    <string name="login_error">Erro na autenticação</string>
    <string name="logout">Sair</string>
    <string name="search">Pesquisasr</string>
    <string name="success_adding_product">Produto adicionado com sucesso</string>
    <string name="error_adding_product">Erro ao adicionar produto</string>
</resources>