<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_main">

    <ImageView
        android:id="@+id/iv_headset"
        android:layout_width="220dp"
        android:layout_height="180dp"
        android:src="@drawable/img_default_headset"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/default_headset" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_add_headset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="25dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:text="@string/select_a_product"
        android:background="@drawable/background_button_normal"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@+id/iv_headset"
        app:layout_constraintStart_toStartOf="@+id/iv_headset"
        app:layout_constraintEnd_toEndOf="@+id/iv_headset"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_headset_details"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:text="@string/question_mark"
        android:background="@drawable/background_button_normal"
        android:enabled="false"
        app:layout_constraintTop_toTopOf="@+id/bt_add_headset"
        app:layout_constraintStart_toEndOf="@+id/bt_add_headset"/>

</androidx.constraintlayout.widget.ConstraintLayout>